--- a/docs/Asiganciones.qmd
+++ b/docs/Asiganciones.qmd
@@ -7,24 +7,7 @@ format: html
 
 A continuación, encontrará una serie de ejercicios que le ayudarán a complementar lo visto en las asignaciones. Estos ejercicios deben ser entregados al final del curso y se le recompensará con horas en el certificado que se le entregará una vez finalizado el curso, todo esto a su propio ritmo. Si tiene alguna consulta, no dude en preguntarnos a través de nuestras redes sociales o correo electrónico (admi@hnbiology.org o david.murillo@hnbiology.org).
 
-## Asignación 1
-
-Construya un data frame que contenga 2 variables categóricas y 2 variables numéricas, cada una con 20 observaciones. La tabla debe llamarse "MiAsignacion1".
-
-## Asignación 2
-
-Utilizando la equacion $$N(t) = N(0)R^t$$ grafique el tamaño de la población para una especie x. Donde La población inicial se estableció en 321 individuos, la tasa de crecimiento es de 0.91, y la observación se extendió a lo largo de 82 años.
-
-A medida que avance en el curso, se irán agregando más asignaciones.
-
-=======
----
-title: "Asignacion"
-author: "David Murillo"
-format: html
----
-
-A continuación, encontrará una serie de ejercicios que le ayudarán a complementar lo visto en las asignaciones. Estos ejercicios deben ser entregados al final del curso y se le recompensará con horas en el certificado que se le entregará una vez finalizado el curso, todo esto a su propio ritmo. Si tiene alguna consulta, no dude en preguntarnos a través de nuestras redes sociales o correo electrónico (admi@hnbiology.org o david.murillo@hnbiology.org).
+::: panel-tabset
 
 ## Asignación 1
 
@@ -36,4 +19,20 @@ Utilizando la equacion $$N(t) = N(0)R^t$$ grafique el tamaño de la población p
 
 A medida que avance en el curso, se irán agregando más asignaciones.
 
->>>>>>> 082fd59577c8fd42a960f68cb8c672c6e2b0e9ad
+## Asignación 3
+
+Realizar el ejercicio visto en clase para estimar la abundancia y su respectivos intervalos de confianza al 95%, asi como presentar el grafico, utilizando el metodo de transectos.
+
+## Asignación 4
+
+Realizar el ejercicio realizado en clases, pero con una base de datos distinta "amakihi"
+
+## Asignación 5
+
+Realizar el ejercicio visto en clase, pero utilizando el archivo SETMAF.rds del googledrive
+
+## Asignación 6
+
+## Asignación 7
+
+:::
