--- a/docs/Clase8.qmd
+++ b/docs/Clase8.qmd
@@ -1,4 +1,3 @@
-
 ---
 title: "Clase 8- Uso de Unmarked: Estimación de abundancia por transecto"
 format: html
@@ -22,10 +21,10 @@ library(readxl)
 
 AvesTransecto <- read_excel("data/Transectos.xlsx", sheet = 2)
 AvesTransecto <- read.delim("data/Transectos.txt")
+PaisajeMetricas <- readRDS("data/Paisaje250.rds")
 ```
 
 ::: panel-tabset
-
 ## Procesar base de datos
 
 ```{r}
@@ -45,88 +44,92 @@ head(AvesTransectoLimpia %>%
 Filtrar algunas especies insectivoras
 
 ```{r}
-Insectivoras <- AvesTransectoLimpia %>% 
-  filter(Especie %in% c("CARPUS", "SETCIT", "SETVIR", "TROAED", "BASCUL", "MIOOLE",
-                        "SETPET", "BASRUF", "MNIVAR", "OREPER", "MYOMIN", "SETPEN", "SETRUT",
-                        "VERCHR", "VERCYA"))
+Insectivoras <- AvesTransectoLimpia %>%
+  filter(Deteccion == "Visual") %>% 
+  group_by(Sitio, Distancia, Especie) %>% 
+  summarise(Abundancia = n()) %>% 
+  pivot_wider(names_from = Especie, values_from = Abundancia, values_fill = 0) %>% 
+  select(Sitio, Distancia, CARPUS, SETCIT, SETVIR, TROAED, BASCUL, MIOOLE,
+                        SETPET, BASRUF, MNIVAR, OREPER, MYOMIN, SETPEN, SETRUT,
+                        VERCHR, VERCYA) %>% 
+  mutate(Distancia_Level = cut(Distancia, 
+                     breaks = c(0, 10, 20, 30, 40, 50, 60, 70, 80, Inf), 
+                     labels = c("Level1", "Level2", "Level3", "Level4", "Level5",
+                                "Level6", "Level7", "Level8", "Level9"))) 
 
-head(Insectivoras)
+Insectivoras$Abundancia <- rowSums(Insectivoras[, c("CARPUS", "SETCIT", "SETVIR", "TROAED",
+                                                    "BASCUL", "MIOOLE",
+                                                    "SETPET", "BASRUF", "MNIVAR", "OREPER",
+                                                    "MYOMIN", "SETPEN",
+                                                    "SETRUT", "VERCHR", "VERCYA")])
+
+Insectivoras2 <- Insectivoras %>% 
+  group_by(Sitio, Distancia_Level) %>% 
+  summarise(Abundancia = max(Abundancia, na.rm = TRUE)) %>% 
+  pivot_wider(names_from = Distancia_Level, values_from = Abundancia, values_fill = 0) %>% 
+  select(Sitio, Level1, Level2, Level3, Level4, Level5)
+
+head(Insectivoras2)
 
 table(Insectivoras$Distancia)
 ```
-Crear intervalos de distancias
+## Agragar covariables de paisaje
 
-
-```{r}
-
-Insectivoras2 <- Insectivoras %>%
-  mutate(Distance_Level = cut(Distancia, breaks = c(0, 10, 15, 20, 25, 35), 
-                              labels = c("Level1", "Level2", "Level3", "Level4", "Level5")))
-
-table(Insectivoras2$Distance_Level)
-
-```
-Obtener valores de abundancia por Nivel de distancia
 
 ```{r}
 Insectivoras3 <- Insectivoras2 %>% 
-  group_by(Sitio, Fecha, Visita, Hora_I, Hora_F, Observador, Distance_Level) %>% 
-  summarise(Abundacia = n() ) 
-  
-
-Insectivoras4 <- Insectivoras3 %>% 
-  pivot_wider(names_from = Distance_Level, values_from = Abundacia, values_fill = 0) %>% 
-  select(Sitio, Fecha, Visita, Hora_I, Hora_F, Observador, 
-         Level1, Level2, Level3, Level4, Level5) %>% 
-  mutate(Fecha = dmy(Fecha)) %>%
-  mutate(FechaOrd = yday(Fecha))
+  mutate(Site_ID = Sitio) %>% 
+  left_join(PaisajeMetricas, by= "Site_ID")
 ```
+
+
 ## Prepara data en formato unmarked
 
 ```{r}
-y <- cbind(Insectivoras4$Level1, Insectivoras4$Level2,
-           Insectivoras4$Level3, Insectivoras4$Level4,
-           Insectivoras4$Level5)
+y <- cbind(Insectivoras3$Level1, Insectivoras3$Level2,
+           Insectivoras3$Level3, Insectivoras3$Level4,
+           Insectivoras3$Level5)
 
-SiteCovs <- Insectivoras4[,c(4,12)]
+SiteCovs <- Insectivoras3[,c(8,17)]
 
-Insectivoras4$Longitud <- c(100)
+Insectivoras3$Longitud <- c(100)
 
 InsectivorasUMF <- unmarkedFrameDS(y= y ,
                                    siteCovs = SiteCovs,
                                    dist.breaks = seq(0, 35, by= 6),
                                    survey = "line",
                                    unitsIn = "m",
-                                   tlength = Insectivoras4$Longitud)
+                                   tlength = Insectivoras3$Longitud)
 ```
-
 
 ## Fit model
 
 ```{r}
 fmp1 <- distsamp(~ 1 ~ 1, InsectivorasUMF)
 
-fmp2 <- distsamp(~ 1 ~ FechaOrd, keyfun = "halfnorm", output = "density", unitsOut = "ha",  InsectivorasUMF)
+fmp2 <- distsamp(~ 1 ~ Forest, keyfun = "halfnorm", output = "density", unitsOut = "ha",  InsectivorasUMF)
 
-fmp3 <- distsamp(~ 1 ~ FechaOrd, keyfun = "hazard", output = "density", unitsOut = "ha", InsectivorasUMF)
+fmp3 <- distsamp(~ 1 ~ Forest, keyfun = "hazard", output = "density", unitsOut = "ha", InsectivorasUMF)
 
-fmp4 <- distsamp(~ 1 ~ FechaOrd, keyfun = "exp", output = "density", unitsOut = "ha", InsectivorasUMF)
+fmp4 <- distsamp(~ 1 ~ Forest, keyfun = "exp", output = "density", unitsOut = "ha", InsectivorasUMF)
 
-fmp5 <- distsamp(~ 1 ~ FechaOrd, keyfun = "uniform", output = "density", unitsOut = "ha", InsectivorasUMF)
+fmp5 <- distsamp(~ 1 ~ Forest, keyfun = "uniform", output = "density", unitsOut = "ha", InsectivorasUMF)
 
-fmp6 <- distsamp(~ 1 ~ FechaOrd + I(FechaOrd^2), keyfun = "exp", output = "density", unitsOut = "ha", InsectivorasUMF)
+
 
 
 ```
+
 ## Seleccionar modelo mas adecuado
 
 ```{r}
-Modelos <- list(fmp1, fmp2, fmp3, fmp4, fmp5, fmp6)
-Nombres <- c("fmp1", "fmp2", "fmp3", "fmp4", "fmp5", "fmp6")
+Modelos <- list(fmp1, fmp2, fmp3, fmp4, fmp5)
+Nombres <- c("fmp1", "fmp2", "fmp3", "fmp4", "fmp5")
 
 aictab(Modelos, Nombres, sort = TRUE)
 
 ```
+
 ## Validar modelo
 
 ```{r, warning=FALSE, message=FALSE}
@@ -142,49 +145,45 @@ fitstats <- function(Mod_global2) {
   return(out)
 }
 
-(pb <- parboot(fmp4, fitstats, nsim=100, report=1))
+(pb <- parboot(fmp2, fitstats, nsim=100, report=1))
 
 cHat_pb <- pb@t0[2] / mean(pb@t.star[,2])
 
 
-MigGOF <- Nmix.gof.test(fmp4, nsim = 100, report = 3)
+MigGOF <- Nmix.gof.test(fmp2, nsim = 100, report = 3)
 ```
-
 
 ## Revisar resultados
 
 ```{r}
-summary(fmp4)
-confint(fmp4, type = "state", level= 0.95)
+summary(fmp2)
+confint(fmp2, type = "state", level= 0.95)
 
-exp(coef(fmp4, type="state", altNames=TRUE))
+exp(coef(fmp2, type="state", altNames=TRUE))
 
-hist(fmp4, ylim = c(0, 0.1), xlab="Distance (m)")	# Only works when there are no det covars
+hist(fmp2, ylim = c(0, 0.1), xlab="Distance (m)")	# Only works when there are no det covars
 ```
 
 ## Prepara para graficar
 
 ```{r}
-FechaOrd <- data.frame(FechaOrd = seq(min(Insectivoras4$FechaOrd, na.rm = TRUE), max(Insectivoras4$FechaOrd, na.rm = TRUE), length.out = 100))
+Forest <- data.frame(Forest = seq(min(Insectivoras3$Forest, na.rm = TRUE), max(Insectivoras3$Forest, na.rm = TRUE), length.out = 100))
 
-FechaOrd_pre <- predict(fmp4, newdata = FechaOrd, type = "state")
+Forest_pre <- predict(fmp2, newdata = Forest, type = "state")
 
-FechaOrd_pre$FechaOrd <- FechaOrd$FechaOrd
+Forest_pre$Forest <- Forest$Forest
 ```
 
 ## Graficar
 
 ```{r}
-ggplot(data = FechaOrd_pre, aes(x= FechaOrd, y= Predicted))+
+ggplot(data = Forest_pre, aes(x= Forest, y= Predicted))+
   geom_ribbon(aes(ymin = lower, ymax= upper),
               fill = "lightblue", alpha = 0.4)+
   geom_line()+
   labs(title = "Abundancia de Insectivoros versus fecha")+
   theme_classic()
 ```
-
-
 :::
 
-![HN Biology Investigation Academy](HN Cursos publicidad/HN Biology Inv large.jpg)
-
+![HN Biology Investigation Academy](HN%20Cursos%20publicidad/HN%20Biology%20Inv%20large.jpg)
