--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -28,13 +28,13 @@ El propósito principal de este curso es servir como una guía que permita a los
 
 [Clase 6a- Uso de Unmarked: Estimación de occupacia](Clase6a.html)
 
-[Clase 6b- Uso de Unmarked: Estimación de abundancia por transecto](Clase8.html)
+[Clase 7- Uso de Unmarked: Estimación de abundancia por transecto](Clase8.html)
 
-[Clase 7- Introducción a spAbundance](Clase9.html)
+[Clase 8- Introducción a spAbundance](Clase9.html)
 
-[Clase 8- Uso de Rmark: Captura-Recaptura](Clase5.html)
+[Clase 9a- Uso de Rmark: Captura-Recaptura](Clase5.html)
 
-[Clase 9- Uso de Rmark: Supervivencia de nido](Clase5.html)
+[Clase 9b- Uso de Rmark: Supervivencia de nido](Clase5.html)
 
 [Clase 10- Metapoblaciones, estructura espacial y Análisis de viabilidad poblacional](Clase10.html)
 
