--- a/docs/Clase9.qmd
+++ b/docs/Clase9.qmd
@@ -1,9 +1,13 @@
-<<<<<<< HEAD
+
 ---
-title: "Clase 9- Introducción a spAbundance"
+title: "Clase 8: Introducción a spAbundance y a spOccupancy"
 format: html
 editor: visual
 ---
+
+::: panel-tabset
+
+## spAbundance
 
 El paquete spAbundance ajusta modelos univariados (es decir, de una sola especie) y multivariados (es decir, de múltiples especies) de mezcla espacial N, modelos jerárquicos de muestreo de distancia y modelos mixtos generalizados lineales utilizando cadenas de Markov Monte Carlo (MCMC). Los modelos espaciales se ajustan utilizando Procesos Gaussianos de Vecino más Cercano (NNGPs) para facilitar el ajuste del modelo a grandes conjuntos de datos espaciales. spAbundance utiliza una sintaxis análoga a su "paquete hermano" spOccupancy (Doser et al. 2022). A continuación, proporcionamos una introducción muy breve a algunas de las funcionalidades del paquete e ilustramos solo una de las funciones de ajuste del modelo. Para obtener más información, consulta los recursos referenciados al final de esta página y la pestaña "Artículos" en la parte superior de la página.
 
@@ -13,147 +17,107 @@ En esta clase, vamos a explorar el paquete spAbundance y comparar su implementac
 
 ```{r}
 library(spAbundance)
+library(tidyverse)
 ```
-
-```{r, echo=FALSE}
-set.seed(1010)
-J.x <- 15
-J.y <- 15
-J <- J.x * J.y
-n.rep <- sample(3, J, replace = TRUE)
-beta <- c(0, -1.5, 0.3, -0.8)
-p.abund <- length(beta)
-mu.RE <- list(levels = c(30),
-	       sigma.sq.mu = c(1.3))
-kappa <- 0.5
-sp <- FALSE 
-family <- 'NB'
-dat <- simAbund(J.x = J.x, J.y = J.y, n.rep = n.rep, beta = beta, 
-                kappa = kappa, mu.RE = mu.RE, sp = sp, family = 'NB')
-
-y <- dat$y
-X <- dat$X
-X.re <- dat$X.re
-
-covs <- list(int = X[, , 1], 
-             abund.cov.1 = X[, , 2], 
-             abund.cov.2 = X[, , 3], 
-             abund.cov.3 = X[, , 4],
-             abund.factor.1 = X.re[, , 1])
-
-data.list <- list(y = y, covs = covs)
-
-# Priors
-prior.list <- list(beta.normal = list(mean = 0, var = 100),
-                   kappa.unif = c(0.001, 10)) 
-# Starting values
-inits.list <- list(beta = 0, kappa = kappa)
-
-tuning <- list(kappa = 0.2, beta = 0.1, beta.star = 0.2)
-n.batch <- 5
-batch.length <- 25
-n.burn <- 0
-n.thin <- 1
-n.chains <- 1
-```
-
-```{r,}
-Model1 <- abund(formula = ~ abund.cov.1 + abund.cov.2 + abund.cov.3 + 
-                         (1 | abund.factor.1),
-                         data = data.list, 
-                         n.batch = n.batch, 
-                         batch.length = batch.length, 
-                         inits = inits.list, 
-                         tuning = tuning,
-                         priors = prior.list, 
-                         accept.rate = 0.43, 
-                         n.omp.threads = 1, 
-                         verbose = TRUE, 
-                         n.report = 1,
-                         n.burn = n.burn,
-                         n.thin = n.thin,
-                         n.chains = n.chains) 
-summary(Model1)
-```
-
-![HN Biology Investigation Academy](HN%20Cursos%20publicidad/HN%20Biology%20Inv%20large.jpg)
-=======
----
-title: "Clase 9- Introducción a spAbundance"
-format: html
-editor: visual
----
-
-El paquete spAbundance ajusta modelos univariados (es decir, de una sola especie) y multivariados (es decir, de múltiples especies) de mezcla espacial N, modelos jerárquicos de muestreo de distancia y modelos mixtos generalizados lineales utilizando cadenas de Markov Monte Carlo (MCMC). Los modelos espaciales se ajustan utilizando Procesos Gaussianos de Vecino más Cercano (NNGPs) para facilitar el ajuste del modelo a grandes conjuntos de datos espaciales. spAbundance utiliza una sintaxis análoga a su "paquete hermano" spOccupancy (Doser et al. 2022). A continuación, proporcionamos una introducción muy breve a algunas de las funcionalidades del paquete e ilustramos solo una de las funciones de ajuste del modelo. Para obtener más información, consulta los recursos referenciados al final de esta página y la pestaña "Artículos" en la parte superior de la página.
-
-[spAbundance](https://www.jeffdoser.com/files/spabundance-web/)
-
-En esta clase, vamos a explorar el paquete spAbundance y comparar su implementación con los paquetes Distance y Unmarked.
+Cargar Base de datos
 
 ```{r}
-library(spAbundance)
+CARPUS <- readRDS("data/CARPUSunmarked.rds")
 ```
 
-```{r, echo=FALSE}
-set.seed(1010)
-J.x <- 15
-J.y <- 15
-J <- J.x * J.y
-n.rep <- sample(3, J, replace = TRUE)
-beta <- c(0, -1.5, 0.3, -0.8)
-p.abund <- length(beta)
-mu.RE <- list(levels = c(30),
-	       sigma.sq.mu = c(1.3))
-kappa <- 0.5
-sp <- FALSE 
-family <- 'NB'
-dat <- simAbund(J.x = J.x, J.y = J.y, n.rep = n.rep, beta = beta, 
-                kappa = kappa, mu.RE = mu.RE, sp = sp, family = 'NB')
+Preparar datos para la tabla
 
-y <- dat$y
-X <- dat$X
-X.re <- dat$X.re
+```{r}
+CARPUS_y <- CARPUS[,12:14]
 
-covs <- list(int = X[, , 1], 
-             abund.cov.1 = X[, , 2], 
-             abund.cov.2 = X[, , 3], 
-             abund.cov.3 = X[, , 4],
-             abund.factor.1 = X.re[, , 1])
+CARPUS$Type <- factor(CARPUS$Type)
 
-data.list <- list(y = y, covs = covs)
+covs <- list(Elevacion = CARPUS[,4],
+             Habitat = CARPUS[,3],
+             AreaBasal = CARPUS[,5])
 
-# Priors
-prior.list <- list(beta.normal = list(mean = 0, var = 100),
-                   kappa.unif = c(0.001, 10)) 
-# Starting values
-inits.list <- list(beta = 0, kappa = kappa)
 
-tuning <- list(kappa = 0.2, beta = 0.1, beta.star = 0.2)
-n.batch <- 5
-batch.length <- 25
-n.burn <- 0
-n.thin <- 1
-n.chains <- 1
+CARPUS_covs <- list(y= CARPUS_y, covs = covs)
+```
+
+Ajustar modelo
+
+```{r, message=FALSE, warning=FALSE, results='hide'}
+out <- abund(formula = ~ 1,
+             data = CARPUS_covs,
+             n.rep = 3, family = "Poisson",
+             n.batch = 300, batch.length = 100)
+
+out1 <- abund(formula = ~ Elevacion,
+             data = CARPUS_covs,
+             n.rep = 3, family = "Poisson",
+             n.batch = 300, batch.length = 100)
+
+out2 <- abund(formula = ~ Habitat ,
+             data = CARPUS_covs,
+             n.rep = 3, family = "Poisson",
+             n.batch = 300, batch.length = 100)
+
+out3 <- abund(formula = ~ AreaBasal,
+             data = CARPUS_covs,
+             n.rep = 3, family = "Poisson",
+             n.batch = 300, batch.length = 100)
 ```
 
 ```{r,}
-Model1 <- abund(formula = ~ abund.cov.1 + abund.cov.2 + abund.cov.3 + 
-                         (1 | abund.factor.1),
-                         data = data.list, 
-                         n.batch = n.batch, 
-                         batch.length = batch.length, 
-                         inits = inits.list, 
-                         tuning = tuning,
-                         priors = prior.list, 
-                         accept.rate = 0.43, 
-                         n.omp.threads = 1, 
-                         verbose = TRUE, 
-                         n.report = 1,
-                         n.burn = n.burn,
-                         n.thin = n.thin,
-                         n.chains = n.chains) 
-summary(Model1)
+waicAbund(out)
+waicAbund(out1)
+waicAbund(out2)
+waicAbund(out3)
+
+summary(out3)
+
+# Abundance regression coefficients
+plot(out, param = 'beta', density = FALSE)
+
 ```
 
+Preparar tabla para graficar
+
+```{r}
+AreaBasal <- data.frame(AreaBasal = seq(min(CARPUS$Area_Basal, na.rm = TRUE), 
+                                  max(CARPUS$Area_Basal, na.rm = TRUE), 
+                                  length.out = 100))
+
+AreaBasal.s <- AreaBasal - mean(CARPUS$Area_Basal, na.rm = TRUE) / 
+                   sd(CARPUS$Area_Basal, na.rm = TRUE)
+
+
+X.0 <- as.matrix(data.frame(intercept = 1, AreaBasal = AreaBasal.s))
+
+out.pred <- predict(out3, X.0, ignore.RE = TRUE)
+
+# Get the lower bound, median, and 95% credible interval
+mu.0.quants <- apply(out.pred$mu.0.samples, 2, quantile, 
+                     prob = c(0.025, 0.5, 0.975))
+
+mu.plot.dat <- data.frame(mu.med = mu.0.quants[2, ], 
+                          mu.low = mu.0.quants[1, ], 
+                          mu.high = mu.0.quants[3, ], 
+                          AreaBasal = AreaBasal)
+```
+
+
+Graficar modelo
+
+```{r}
+ggplot(mu.plot.dat, aes(x = AreaBasal, y = mu.med)) + 
+  geom_ribbon(aes(ymin = mu.low, ymax = mu.high), fill = 'lightblue', alpha = 0.5) +
+  geom_line() + 
+  theme_bw() + 
+  labs(x = 'Covariate', y = 'Expected abundance') +
+  theme_classic()
+```
+
+
+
+## spOccupancy
+
+spOccupancy ajusta modelos de ocupación espacial de especies individuales, múltiples especies e integrados utilizando el método de Monte Carlo por cadenas de Markov (MCMC). Los modelos se ajustan utilizando la técnica de aumento de datos Pólya-Gamma. Los modelos espaciales se ajustan utilizando procesos gaussianos o procesos gaussianos de vecinos más cercanos (NNGP) para conjuntos de datos espaciales grandes. El paquete proporciona funcionalidad para la integración de datos de ocupación de múltiples especies individuales utilizando un marco de verosimilitud conjunta. Para modelos de múltiples especies, spOccupancy proporciona funciones para tener en cuenta las correlaciones residuales entre especies en un marco de modelo de distribución de especies conjuntas mientras se tiene en cuenta la detección imperfecta. A partir de la versión 0.4.0, spOccupancy proporciona funciones para modelos de ocupación de especies individuales de múltiples temporadas (es decir, espacio-temporales). A continuación, proporcionamos una introducción muy breve a algunas de las funcionalidades del paquete, e ilustramos solo una de las funciones de ajuste de modelos. Para obtener más información, consulte los recursos referenciados al final de esta página.
+
 ![HN Biology Investigation Academy](HN%20Cursos%20publicidad/HN%20Biology%20Inv%20large.jpg)
->>>>>>> 082fd59577c8fd42a960f68cb8c672c6e2b0e9ad
