--- a/docs/Asiganciones.qmd
+++ b/docs/Asiganciones.qmd
@@ -49,3 +49,6 @@ Ajustar modelos de abundancia con enfoque bayesiano utilizando el paquete 'spAbu
 
 
 :::
+
+
+![HN Biology Investigation Academy](HN Cursos publicidad/HN Biology Inv large.jpg)
