--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -32,11 +32,9 @@ El propósito principal de este curso es servir como una guía que permita a los
 
 [Clase 8- Introducción a spAbundance y spOccupancy](Clase9.html)
 
-[Clase 9a- Uso de Rmark: Captura-Recaptura](Clase5.html)
+[Clase 9- Uso de Rmark: Supervivencia de nido](Clase5.html)
 
-[Clase 9b- Uso de Rmark: Supervivencia de nido](Clase5.html)
-
-[Clase 10- Metapoblaciones, estructura espacial y Análisis de viabilidad poblacional](Clase10.html)
+[Clase 10- upervivencia de nido: Enfoque Bayesiano](Clase10b.html)
 
 
 *No dude en consultarnos ante cualquier inconveniente que surja durante el curso. Puede contactarnos a través de admi@hnbiology.org.*
